--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,14 +1,22 @@
+FROM node:20-alpine AS builder
+
+WORKDIR /app
+
+COPY api/package*.json ./
+RUN npm install
+
+COPY api/tsconfig.json ./
+COPY api/src ./src
+RUN npm run build
+
 FROM node:20-alpine
 
 WORKDIR /app
 
-COPY package*.json ./
-RUN npm install
+COPY api/package*.json ./
+RUN npm install --omit=dev
 
-COPY tsconfig.json ./
-COPY src ./src
-
-RUN npm run build
+COPY --from=builder /app/dist ./dist
 
 EXPOSE 3001
-CMD ["npm", "start"]
+CMD ["node", "dist/index.js"]
